# ComputerStoreWeb

./: README.md  pyproject.toml
src/csw_backend/: db.sqlite3  manage.py
src/csw_backend/backend_api/: views.py
src/csw_backend/backend_api/templates/backend_api/: index.html
src/csw_backend/csw_backend/: asgi.py  settings.py  urls.py  wsgi.py
